--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 alembic==1.7.7
 click==8.1.2
 colorama==0.4.4
+DateTime==4.4
 dnspython==2.2.1
 email-validator==1.1.3
 Flask==2.1.1
 Flask-Cors==3.0.10
 Flask-HTTPAuth==4.5.0
+Flask-Login==0.6.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
@@ -17,11 +19,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.1
 Mako==1.2.0
 MarkupSafe==2.1.1
-
+ordereddict==1.1
 python-dotenv==0.20.0
+pytz==2022.1
 six==1.16.0
 SQLAlchemy==1.4.35
 Werkzeug==2.1.1
 wtf==0.1
 WTForms==3.0.1
 zipp==3.8.0
+zope.interface==5.4.0
